tests/idris2/error/perror016/expected
1/1: Building ParseIf (ParseIf.idr)
Error: Expected 'then'.

ParseIf:3:26--3:30
 1 |
 2 | test : Int -> Int
 3 | test a = if a < 10 the 0 else a
                              ^^^^

1/1: Building ParseIf2 (ParseIf2.idr)
Error: Expected 'then'.

ParseIf2:4:33--4:37
 1 |
 2 | test : Int -> Int
 3 | test a = if a < 10
 4 |             then if a < 0 the 0 else 5
                                     ^^^^

1/1: Building ParseIf3 (ParseIf3.idr)
Error: Expected 'then'.

ParseIf3:3:26--3:30
 1 |
 2 | test : Int -> Int
 3 | test a = (if a < 0 the 0 else 5)
                              ^^^^

1/1: Building ParseIf4 (ParseIf4.idr)
Error: Couldn't parse any alternatives:
1: Not the end of a block entry.

ParseIf4:9:39--9:41
 5 |     case stuff of
 6 |       (Left err) => printLn err
 7 |       (Right content) => if content == ""
 8 |                             then println "Empty"
 9 |                             else blah <- doSomething
                                           ^^
... (2 others)
